Set up for container memory